# mmt-attacker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Montimage_mmt-attacker_20260326.md  README.backup.md  README.md  SECURITY.md  WEB_INTERFACE_PLAN.md  docker-compose.yml  index.html  install.sh  mmt-attacker-intro.pptx  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  slowloris_dos.sh  ssh_brute_force.sh  tool-descriptor.md  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.playbook-runner/: builder_result.json
.playbook-runner/fix_results/: arp-spoof_attempt1.json  bgp-hijacking_attempt1.json  dns-amplification_attempt1.json  dns-amplification_attempt2.json  http-dos_attempt1.json  icmp-flood_attempt1.json  icmp-flood_attempt2.json  mac-flooding_attempt1.json  ntp-amplification_attempt1.json  ping-of-death_attempt1.json  slowloris_attempt1.json  smurf-attack_attempt1.json  udp-flood_attempt1.json  udp-flood_attempt2.json
.playbook-runner/scenario_results/: arp-spoof.json  bgp-hijacking.json  credential-harvester.json  dhcp-starvation.json  directory-traversal.json  dns-amplification.json  ftp-brute-force.json  http-dos.json  http-flood.json  icmp-flood.json  mac-flooding.json  mitm.json  ntp-amplification.json  pcap-replay.json  ping-of-death.json  rdp-brute-force.json  slowloris.json  smurf-attack.json  sql-injection.json  ssh-brute-force.json  ssl-strip.json  syn-flood.json  udp-flood.json  vlan-hopping.json  xss.json  xxe.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEMO.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  PLAYBOOK.md  architecture.excalidraw  data-flow.excalidraw  playbook-run-2026-03-31.md
frontend/: .gitignore  README.md  TODO-LIST.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: _redirects
frontend/src/: App.jsx  index.css
matcha/: __init__.py  __main__.py  cli.py  logger.py  output.py  registry.py
matcha/commands/: __init__.py  completions_cmd.py  factory.py  info_cmd.py  list_cmd.py  syn_flood_cmd.py
public/: CNAME
scripts/arp_spoofing/: README.md  arp_spoof.py
scripts/bgp_hijacking/: README.md  bgp_hijacking.py
scripts/credential_harvester/: README.md  credential_harvester.py  requirements.txt
scripts/dhcp_starvation/: README.md  dhcp_starvation.py
scripts/directory_traversal/: README.md  directory_traversal.py
scripts/dns_amplification/: README.md  dns_amplification.py  requirements.txt
scripts/ftp_brute_force/: README.md  ftp_brute_force.py
scripts/http_dos/: README.md  http_dos.py
scripts/http_flood/: README.md  http_flood.py
scripts/icmp_flood/: README.md  icmp_flood.py
scripts/mac_flooding/: README.md  mac_flooding.py
scripts/mitm/: README.md  mitm.py
scripts/ntp_amplification/: README.md  ntp_amplification.py
scripts/pcap_replay/: README.md  pcap_replay.py
scripts/ping_of_death/: README.md  ping_of_death.py
scripts/rdp_brute_force/: README.md  rdp_brute_force.py
scripts/slowloris/: README.md  slowloris.py
scripts/smurf_attack/: README.md  smurf_attack.py
src/: App.jsx  attacks.json  attacks.py  cli.py  dict.txt  index.css  mmt-attack.py  mmt_attack.py  network_utils.py  utils.py
tests/: test_cli.py  test_commands.py  test_e2e.py  test_factory.py  test_info_cmd.py  test_list_cmd.py  test_output.py  test_registry.py  test_syn_flood_cmd.py
utils/: logger.py  network_utils.py  utils.py
(+128 files in other folders)
