[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmt-attacker"
version = "0.1.0"
description = "MMT Attack Toolkit - Network attack simulation tool"
requires-python = ">=3.7"
dependencies = [
    "click",
    "beautifulsoup4>=4.9.3",
    "cryptography>=3.4.7",
    "ipaddress>=1.0.23",
    "mechanize>=0.4.5",
    "netifaces",
    "paramiko>=2.7.2",
    "PySocks>=1.7.1",
    "requests>=2.25.1",
    "scapy>=2.4.5",
    "urllib3>=1.26.5",
]

[project.scripts]
matcha = "matcha.cli:cli"

[tool.setuptools.packages.find]
include = ["matcha*"]
