[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmt-attacker"
dynamic = ["version"]
description = "MMT Attack Toolkit - 26 network attacks from one CLI for authorized security testing and education"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["security", "network", "attack-simulation", "penetration-testing", "cli", "scapy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "click>=8.0",
    "beautifulsoup4>=4.9.3",
    "cryptography>=3.4.7",
    "ipaddress>=1.0.23",
    "mechanize>=0.4.5",
    "netifaces",
    "paramiko>=2.7.2",
    "PySocks>=1.7.1",
    "requests>=2.25.1",
    "scapy>=2.4.5",
    "urllib3>=1.26.5",
]

[project.urls]
Homepage = "https://github.com/Montimage/mmt-attacker"
Repository = "https://github.com/Montimage/mmt-attacker"
Documentation = "https://github.com/Montimage/mmt-attacker/tree/main/docs"
Issues = "https://github.com/Montimage/mmt-attacker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.9",
]

[project.scripts]
matcha = "matcha.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "matcha.__version__"}

[tool.setuptools.packages.find]
include = ["matcha*"]

[tool.ruff]
target-version = "py312"
line-length = 99
extend-exclude = ["scripts/", "src/", "utils/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"matcha/registry.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (run with -m e2e)",
]
